lexion_lang/tests/snapshots/x86_smoke__x86_smoke_stack_function_call.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/x86_stack_function_call.lex\")"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global sum7
sum7:
# fn sum7(a: i32, b: i32, c: i32, d: i32, e: i32, f: i32, g: i32) -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 16
  mov eax, DWORD PTR [rbp+16]
  mov DWORD PTR [rbp-8], eax
#     return a + b + c + d + e + f + g;
  mov r10d, edi
  add r10d, esi
  mov edi, r10d
  add edi, edx
  mov esi, edi
  add esi, ecx
  mov edi, esi
  add edi, r8d
  mov esi, edi
  add esi, r9d
  mov eax, esi
  add eax, DWORD PTR [rbp-8]
  add rsp, 16
  pop rbp
  ret
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
#     return sum7(1 + 2, 3, 4, 5, 6, 7, 8 + 9);
  mov eax, 8
  add eax, 9
  mov edi, 1
  add edi, 2
  push rax
  mov eax, 7
  push rax
  mov eax, 6
  push rax
  mov eax, 5
  push rax
  mov eax, 4
  push rax
  mov eax, 3
  push rax
  mov eax, edi
  push rax
  pop rdi
  pop rsi
  pop rdx
  pop rcx
  pop r8
  pop r9
  sub rsp, 8
  mov rax, QWORD PTR [rsp+8]
  mov QWORD PTR [rsp], rax
  call sum7
  add rsp, 16
  pop rbp
  ret
