lexion_lang/tests/snapshots/x86_smoke__x86_smoke_string_literals.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/x86_string_literals.lex\")"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 32
#     let first = "hello";
  lea rax, [rip + .Lstr_68656c6c6f]
  mov QWORD PTR [rbp-16], rax
  mov QWORD PTR [rbp-16+8], 5
#     let second = first;
  mov eax, DWORD PTR [rbp-16]
  mov DWORD PTR [rbp-32], eax
  mov eax, DWORD PTR [rbp-16+4]
  mov DWORD PTR [rbp-32+4], eax
  mov eax, DWORD PTR [rbp-16+8]
  mov DWORD PTR [rbp-32+8], eax
  mov eax, DWORD PTR [rbp-16+12]
  mov DWORD PTR [rbp-32+12], eax
#     second = "world";
  lea rax, [rip + .Lstr_776f726c64]
  mov QWORD PTR [rbp-32], rax
  mov QWORD PTR [rbp-32+8], 5
#     return 0;
  mov eax, 0
  add rsp, 32
  pop rbp
  ret
.section .rodata
.Lstr_68656c6c6f:
  .byte 104, 101, 108, 108, 111
.Lstr_776f726c64:
  .byte 119, 111, 114, 108, 100
