lexion_lang/tests/snapshots/x86_smoke__x86_smoke_string_stack_arguments.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/x86_string_abi_stack.lex\")"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global take
take:
# fn take(a: i32, b: i32, c: i32, d: i32, e: i32, f: i32, value: &str) -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 16
  mov DWORD PTR [rbp-8], edi
#     return a;
  mov eax, DWORD PTR [rbp-8]
  add rsp, 16
  pop rbp
  ret
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
#     return take(1, 2, 3, 4, 5, 6, "hello");
  sub rsp, 16
  lea rax, [rip + .Lstr_68656c6c6f]
  mov rdx, 5
  mov QWORD PTR [rsp], rax
  mov QWORD PTR [rsp+8], rdx
  mov eax, 6
  push rax
  mov eax, 5
  push rax
  mov eax, 4
  push rax
  mov eax, 3
  push rax
  mov eax, 2
  push rax
  mov eax, 1
  push rax
  pop rdi
  pop rsi
  pop rdx
  pop rcx
  pop r8
  pop r9
  call take
  add rsp, 16
  pop rbp
  ret
.section .rodata
.Lstr_68656c6c6f:
  .byte 104, 101, 108, 108, 111
