lexion_lang/tests/snapshots/x86_smoke__x86_smoke_ternary_false_expression.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/ternary_false_expression.lex\")"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 16
#     let first = 4;
  mov eax, 4
#     let second = 9;
  mov edi, 9
#     let flag = first > second;
  mov esi, eax
  cmp esi, edi
  setg sil
  movzx esi, sil
  mov edx, esi
#     let value = flag ? first + 1 : second - 3;
  cmp edx, 0
  je $celse_1
$cthen_1:
  mov esi, eax
  add esi, 1
  mov eax, esi
  mov DWORD PTR [rbp-8], eax
  jmp $cend_1
$celse_1:
  mov esi, edi
  sub esi, 3
  mov eax, esi
  mov DWORD PTR [rbp-8], eax
$cend_1:
  mov eax, DWORD PTR [rbp-8]
#     return value;
  add rsp, 16
  pop rbp
  ret
