lexion_lang/tests/snapshots/x86_smoke__x86_smoke_unsigned_shift_operators.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/x86_unsigned_shift.lex\")"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global main
main:
# fn main() -> u32 {
  push rbp
  mov rbp, rsp
#     let value: u32 = ~0;
  mov eax, 0
  not eax
  mov edi, eax
#     return value >> 1;
  mov eax, edi
  mov ecx, 1
  shr eax, cl
  pop rbp
  ret
